--- a/07-WeekSeven/RentACar/src/view/BrandGUI.form
+++ b/07-WeekSeven/RentACar/src/view/BrandGUI.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.BrandView">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.BrandGUI">
   <grid id="27dc6" binding="container" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
@@ -8,29 +8,29 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="a8361" class="javax.swing.JLabel" binding="lbl_brand">
+      <component id="9b5f0" class="javax.swing.JLabel" binding="label_brand">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font size="16" style="1"/>
-          <text value="Brand Add/Edit"/>
+          <font size="13" style="1"/>
+          <text value="Brand Add / Edit"/>
         </properties>
       </component>
-      <vspacer id="8db43">
+      <vspacer id="626d8">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="e0ac9" class="javax.swing.JLabel" binding="lbl_brand_name">
+      <component id="b1dcd" class="javax.swing.JLabel" binding="label_brand_name">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Brand name"/>
+          <text value="Brand Name"/>
         </properties>
       </component>
-      <component id="c0941" class="javax.swing.JTextField" binding="fld_brand_name">
+      <component id="cabf8" class="javax.swing.JTextField" binding="field_brand_name">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -38,7 +38,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="78055" class="javax.swing.JButton" binding="btn_brand_save">
+      <component id="b1547" class="javax.swing.JButton" binding="button_brand_save">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
